docs: Add comprehensive project development timeline and update package name to scoped format.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pmg",
+  "name": "@shubham-01-star/pmg",
   "version": "0.1.0",
   "description": "Personal Memory Gateway (PMG) MCP server",
   "private": false,
